small bugfixes removed trace from error handler

--- a/templates/indexCommands.html
+++ b/templates/indexCommands.html
@@ -36,7 +36,7 @@ Commands (case insensitive):<br />
 <br />
 <a href="/csv/getamb">print responses in CSV format</a><br />
 <a href="/csvheader/getamb">print responses in CSV format with header</a><br />
-/<a href="/hex/getamb">print responses in raw hex format</a><br />
+<a href="/hex/getamb">print responses in raw hex format</a><br />
 <br />
 /deleteanim/anim# - Delete Animation by number (between 0 and GetNumAnims)<br />
 /deleteframe/frame# - Delete Frame by number (between 0 and GetNumFrames)<br />
