added help text and HTML sample for delay command

--- a/templates/indexCommands.html
+++ b/templates/indexCommands.html
@@ -118,6 +118,7 @@ List of supported commands with samples:<br />
 <br />
 <h2>L8 misc</h2>
 <a href="/bootloader">switch to DFU mode</a><br />
+<a href="/delay/50/super/f00/super/00f/super/f00/super/00f/super/000">delay in ms between commands when sending multiple commands - Default: 100</a><br />
 /deleteuserspace/YES - Delete userspace (set YES to delete)<br />
 <a href="/init">get trace info</a><br />
 <a href="/poweroff">poweroff</a><br />
