added support for multiple L8s in L8NodeSrv

--- a/templates/indexCommands.html
+++ b/templates/indexCommands.html
@@ -8,7 +8,7 @@
 
 <h1>hxL8 Server</h1>
 Running on port ::port::<br />
-default interface ::serialPort::<br />
+requested interface ::serialPort::<br />
 <br />
 List of supported commands with samples:<br />
 <h2>L8 applications</h2>
